# rag-search-engine

./: .gitignore  CLAUDE.md  FEATURES.md  README.md  health-supervisor.sh  requirements-lock-py312-linux-gpu.txt
.claude/: .lean-ack.json  lean-ledger.jsonl  settings.json
.githooks/: post-commit  setup.sh
docs/: CONFORMANCE_EVALUATION.md  E2E_TESTING.md  INSTALL.md  MIGRATION_PLAN.md  PERFORMANCE.md  RERANKER_PLAN.md  info-hierarchy.md
embedder/: CLAUDE.md  build.sh  opencode-embedder
indexer/: Cargo.toml
indexer/src/: cleaner.rs  cli.rs  compaction.rs  config.rs  daemon.rs  discover.rs  hardware.rs  http_server.rs  links.rs  main.rs  model_client.rs  process_group.rs  simd.rs  storage.rs  tui.rs  watcher.rs  watcher_startup.rs  worker.rs
indexer/tests/: corruption_recovery.rs  daemon_integration.rs  e2e_optimizations.rs  python_server.rs  quality_integration.rs  status_selfheal.rs
mcp-config/: claude-code.json  codex.json  hermes.json
scripts/: benchmark_mcp.py  benchmark_search.py  build_sample_enrichment.py  check_system.py  check_world_model.py  configure_integrations.py  document_federation.py  e2e-mcp-stdio.sh  e2e-smoke.sh  force_reindex.py  gen_world_model_skills.py  (+13 more)
src/: pyproject.toml
src/opencode_embedder/: __init__.py  server.py
src/opencode_search/: __init__.py  __main__.py  _dashboard_html.py  chunker.py  cleaner.py  cli.py  compaction.py  config.py  cuda_setup.py  daemon.py  dashboard.py  discover.py  embeddings.py  handlers.py  hardware.py  index_config.py  indexer.py  jobs.py  mcp.py  mcp_bridge.py  metrics.py  search.py  storage.py  tokenizer.py  watcher.py
src/opencode_search/core/: config.py  gpu.py  index_config.py  registry.py
src/opencode_search/daemon/: federation.py  runtime_state.py  scheduler.py  server.py  sweeps.py  systemd.py  watcher.py
src/opencode_search/embed/: embedder.py
src/opencode_search/enricher/: __init__.py  client.py
src/opencode_search/graph/: __init__.py  community.py  enrich.py  extractor.py  llm.py  quality.py  resolver.py  storage.py  store.py
src/opencode_search/handlers/: __init__.py  _autopipeline.py  _business.py  _chat_router.py  _debug_trace.py  _enrichment.py  _feature.py  _federation.py  _global_search.py  _graph.py  _hooks.py  _impact.py  _index.py  _kb_chat.py  _patterns.py  _pipeline.py  _query.py  _service_mesh.py  _trace.py  _vacuum.py  _wiki.py
src/opencode_search/index/: bounded_parse.py  chunker.py  discover.py  indexer.py  search.py  store.py
src/opencode_search/kb/: answer_cache.py  bpre.py  bpre_ast.py  bpre_generic.py  bpre_paradigms.py  bpre_spec.py  docgen.py  federation_hierarchy.py  hierarchy.py  patterns.py  resolve_rerank.py  valueflow.py  wiki.py  world_model.py
src/opencode_search/query/: ask.py  chat_router.py  graph_handler.py  search.py
src/opencode_search/server/: _fastmcp_stub.py  _overview.py  dashboard.py  mcp.py  routes.py  routes_admin.py  routes_chat.py  routes_graph.py  routes_ops.py  routes_pipeline.py  routes_project.py  routes_search.py  routes_semantic.py
src/opencode_search/server/static/: dashboard.html
src/opencode_search/wiki/: __init__.py  generator.py  storage.py
src/rag_search/: __init__.py  __main__.py  cli.py  cli_daemon.py
src/rag_search/core/: config.py  gpu.py  index_config.py  registry.py
src/rag_search/daemon/: cpu_budget.py  federation.py  global_prompt.py  runtime_state.py  scheduler.py  server.py  sweeps.py  systemd.py  watcher.py
src/rag_search/embed/: embedder.py
src/rag_search/graph/: community.py  enrich.py  extractor.py  llm.py  quality.py  store.py
src/rag_search/index/: bounded_parse.py  chunker.py  discover.py  indexer.py  store.py  validate.py
src/rag_search/kb/: bpre.py  bpre_ast.py  bpre_generic.py  bpre_paradigms.py  docgen.py  llm_escalation.py  okf.py  patterns.py  resolve_rerank.py  valueflow.py  wiki.py
src/rag_search/query/: ask.py  graph_handler.py  search.py
src/rag_search/server/: _overview.py  dashboard.py  mcp.py  routes.py  routes_admin.py  routes_chat.py  routes_graph.py  routes_ops.py  routes_pipeline.py  routes_project.py  routes_search.py
src/rag_search/server/static/: dashboard.html  sigma-graph.min.js
src/tests/: conftest.py  test_benchmark_search.py  test_chunker.py  test_cleaner.py  test_cli.py  test_community.py  test_compaction.py  test_config.py  test_daemon.py  test_e2e.py  test_e2e_comprehensive.py  test_e2e_mcp_openai.py  test_embeddings.py  test_enrichment_handlers.py  test_graph_extractor.py  test_graph_handlers.py  test_graph_resolver.py  test_graph_storage.py  test_handlers.py  test_index_flow_integration.py  test_indexer.py  test_llm_client.py  test_mcp.py  test_mcp_bridge.py  test_mcp_bridge_scoping.py  test_mcp_bridge_tools.py  test_mcp_e2e_runtime.py  test_metrics.py  test_ollama_client.py  test_search.py  test_storage.py  test_watcher.py  test_wiki_generator.py  test_wiki_storage.py
src/tests/e2e/: test_astro_full.py  test_behavior_e2e.py  test_dashboard_playwright.py
src/tests/integration/: test_daemon_http.py  test_federation.py  test_graph.py
src/tests/live/: _bpre_fixture.py  _projects.py  _sample_workspace.py  conftest.py  test_abstention.py  test_ask.py  test_astro_e2e.py  test_astro_scenarios.py  test_bounded_parse.py  test_bpre.py  test_bpre_ast.py  test_bpre_polyglot.py  test_bpre_processes.py  test_bpre_self_heal.py  test_browser.py  test_cast_chunking.py  test_chat.py  test_cli_integration.py  test_cli_parity.py  test_config_universality.py  test_cpu_budget.py  test_cublas_breaker.py  test_daemon_reload_race.py  test_dashboard_routes_inventory.py  test_deletion_purge.py  test_deterministic_resolution.py  test_dikw_named_projects.py  test_docgen_all_projects.py  test_docgen_dashboard.py  test_docgen_exclusion.py  test_docgen_hierarchy_e2e.py  test_docgen_rootonly.py  test_docs_index.py  test_edge_cases.py  test_embedded_script_extraction.py  test_embedding.py  test_enforcement.py  test_extraction_doctrine_e2e.py  test_feature_proof.py  test_federation_architecture.py  (+81 more)
src/tests/unit/: test_handlers.py  test_jobs.py  test_remove_project.py
(+67 files in other folders)
