[package]
name = "opencode-indexer"
version = "0.1.0"
edition = "2024"
description = "Fast file indexer for opencode — discovers, watches, hashes, and stores embeddings"
license = "MIT"

[lib]
name = "opencode_indexer"
path = "src/lib.rs"

[[bin]]
name = "opencode-indexer"
path = "src/main.rs"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
# Parallel iterators for SIMD batch operations
rayon = { version = "1.10", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
rmp-serde = "1"          # msgpack
serde_yaml = "0.9"

# File watching
notify = "7"

# Hashing
sha2 = "0.10"

# LanceDB (0.16 uses arrow v53 internally)
lancedb = "0.16"
arrow-array = "53"
arrow-schema = "53"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"

# HTTP server/client
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["timeout", "cors"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# Misc
async-channel = "2"      # MPMC channel for lock-free batch distribution
hex = "0.4"
futures = "0.3"
libc = "0.2"
dirs = "6"
glob = "0.3"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
fs2 = "0.4"             # File locking
num_cpus = "1"          # CPU count for parallel processing
lru = "0.12"            # LRU cache for search query results

[build-dependencies]
# No build dependencies needed - version is derived from git commands

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
filetime = "0.2"

[profile.release]
opt-level = 3
lto = "thin"              # "thin" LTO is 2-5x faster than "fat" LTO with ~95% of the benefit
codegen-units = 16        # Parallel codegen (faster compile, slightly larger binary)
strip = true

# Optimize build dependencies (proc-macros, build scripts) for faster compile
[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
