[project]
name = "opencode-search"
version = "0.2.0"
description = "GPU-accelerated local semantic code search engine"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenCode Team" }]

dependencies = [
    # GPU-accelerated embeddings and reranking
    "fastembed-gpu>=0.4.0",
    "onnxruntime-gpu[cuda,cudnn]>=1.24.0",

    # Chunking: code (tree-sitter), semantic, token
    "chonkie[code,semantic]>=1.5.0",
    # Chonkie's embedding registry imports openai even for local-only paths
    "openai>=1.0.0",

    # Chunking: structure-aware text splitters
    "langchain-text-splitters>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # Parsing
    "pyyaml>=6.0.0",

    # Vector database
    "lancedb>=0.20.0",
    "pyarrow>=17.0.0",

    # File watching
    "watchdog>=3.0.0",

    # Gitignore matching
    "pathspec>=0.12.0",

    # Result and model caches
    "cachetools>=5.3.0",

    # VRAM watchdog (nvidia-ml-py is the maintained successor to the deprecated pynvml package)
    "nvidia-ml-py>=12.0.0",

    # MCP stdio server
    "mcp>=1.0.0",

    # CLI
    "typer>=0.9.0",

    # Process utilities
    "psutil>=5.9.0",

    # Structural code graph: AST extraction
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.23.0",

    # Community detection
    "leidenalg>=0.10.0",
    "igraph>=0.11.0",
]

[project.optional-dependencies]
gpu = [
    # GPU matrix ops (L2 normalization)
    "cupy-cuda12x>=13.0.0",
]
prerelease = [
    # Headless browser for human-simulation UI tests
    "playwright>=1.44",
    "pytest-playwright>=0.5.0",
    # TOML writer for codex config.toml patching
    "tomli-w>=1.0",
]
graph-extras = [
    # Entity deduplication: MinHash/LSH blocking + Jaro-Winkler verification
    "datasketch>=1.6.0",
    "rapidfuzz>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-rerunfailures>=14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
opencode-search = "opencode_search.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opencode_search"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",   # line too long — typer help strings are unavoidably long
    "B008",   # typer.Option/Argument in default args is the intended typer API
    "RUF002", # × (MULTIPLICATION SIGN) in docstrings is intentional math notation
    "RUF001", # en-dash/em-dash in JS strings embedded in Python raw strings
    "RUF003", # ambiguous characters in comments (mathematical notation)
    "N806",   # _UPPER_CASE local constants in functions are intentional convention
    "N814",   # CamelCase imported as _lower alias (e.g., ElementTree as _ET)
]

[tool.ruff.lint.per-file-ignores]
"opencode_search/embeddings.py" = ["E402", "F401", "I001"]  # ONNX monkey-patching: unusual import order intentional
"opencode_search/storage.py" = ["E402", "F401", "I001"]     # lancedb dynamic API: unusual import order intentional
"opencode_search/daemon.py" = ["E402", "I001"]              # CUDA path setup must run before any CUDA imports
"opencode_search/handlers/__init__.py" = ["F401"]            # re-export module: all imports are intentionally public

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

# Enforce stricter checking on business-logic modules that are fully typed.
# Excluded: embeddings.py (ONNX monkey-patching), storage.py (lancedb dynamic API).
[[tool.mypy.overrides]]
module = [
    "opencode_search.handlers.*",
    "opencode_search.watcher",
    "opencode_search.config",
    "opencode_search.mcp",
    "opencode_search.mcp_bridge",
    "opencode_search.daemon",
    "opencode_search.daemon_runtime",
    "opencode_search.metrics",
    "opencode_search.index_config",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "opencode_search.embeddings",
    "opencode_search.storage",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["src/tests"]
# reruns=1: handles transient keepalive disconnect and daemon restart windows
# reruns-delay=15: covers the ~6s daemon restart window from test_manage_reload
addopts = "--reruns=1 --reruns-delay=15"
markers = [
    "live: requires daemon at :8765, Ollama at :11434, CUDA GPU — skipped if any absent",
    "slow: LLM-heavy tests (>30s each) — skip for fast smoke checks with -m 'live and not slow'",
]
