[project]
name = "opencode-search"
version = "0.2.0"
description = "GPU-accelerated local semantic code search engine"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenCode Team" }]

dependencies = [
    # GPU-accelerated embeddings and reranking
    "fastembed-gpu>=0.4.0",
    "onnxruntime-gpu[cuda,cudnn]>=1.24.0",

    # Chunking: code (tree-sitter), semantic, token
    "chonkie[code,semantic]>=1.5.0",
    # Chonkie's embedding registry imports openai even for local-only paths
    "openai>=1.0.0",
    # Dashboard chat haiku fallback
    "anthropic>=0.40.0",

    # Chunking: structure-aware text splitters
    "langchain-text-splitters>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # Parsing
    "pyyaml>=6.0.0",

    # Vector database (sqlite-vec: flat ANN, perfect recall, unified store)
    "sqlite-vec>=0.1.0",

    # File watching (Rust `notify` backend: one thread/inotify-instance for all
    # watched roots, Rust-side event coalescing — see daemon/watcher.py)
    "watchfiles>=1.0.0",

    # Gitignore matching
    "pathspec>=0.12.0",

    # Result and model caches
    "cachetools>=5.3.0",

    # VRAM watchdog (nvidia-ml-py is the maintained successor to the deprecated pynvml package)
    "nvidia-ml-py>=12.0.0",

    # MCP stdio server
    "mcp>=1.0.0",

    # CLI
    "typer>=0.9.0",

    # Process utilities
    "psutil>=5.9.0",

    # Structural code graph: AST extraction
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=1.9.1",

    # Community detection
    "leidenalg>=0.10.0",
    "igraph>=0.11.0",
]

[project.optional-dependencies]
browser = [
    # Headless browser for Playwright UI tests
    "playwright>=1.44",
    "pytest-playwright>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",

    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
opencode-search = "opencode_search.cli:app"
ocs-index = "opencode_search.cli:ocs_index_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opencode_search"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",   # line too long — typer help strings are unavoidably long
    "B008",   # typer.Option/Argument in default args is the intended typer API
    "RUF002", # × (MULTIPLICATION SIGN) in docstrings is intentional math notation
    "RUF001", # en-dash/em-dash in JS strings embedded in Python raw strings
    "RUF003", # ambiguous characters in comments (mathematical notation)
    "N806",   # _UPPER_CASE local constants in functions are intentional convention
    "N814",   # CamelCase imported as _lower alias (e.g., ElementTree as _ET)
]

[tool.ruff.lint.per-file-ignores]
"opencode_search/embed/embedder.py" = ["E402"]  # ONNX arena env must be set before fastembed import
"tests/live/test_bpre_processes.py" = ["N802"]  # test method names use A1/B2 category codes (plan §A-H)
"opencode_search/kb/bpre_ast.py" = ["E401", "E402", "E701", "E702", "I001"]  # ultra-compact 150-line budget
"opencode_search/kb/bpre_generic.py" = ["E401", "E702", "E701", "I001"]  # ultra-compact generic engine
"opencode_search/kb/bpre_spec.py" = ["I001", "E731"]  # import order + inline function def
"opencode_search/kb/bpre_paradigms.py" = ["E401", "E702", "E701", "I001"]  # ultra-compact paradigm handlers
"tests/live/test_feature_proof.py" = ["E401", "E702", "E701", "I001"]  # ultra-compact 150-line budget (WS-F/G)
"tests/live/test_okf.py" = ["E402"]  # sys.path.insert before vendor import is intentional
"opencode_search/index/bounded_parse.py" = ["E401", "E702", "I001"]  # ultra-compact 150-line budget

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "opencode_search.core.*",
    "opencode_search.index.*",
    "opencode_search.graph.*",
    "opencode_search.kb.*",
    "opencode_search.query.*",
    "opencode_search.server.*",
    "opencode_search.daemon.*",
    "opencode_search.cli",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["opencode_search.embed.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["src/tests"]
markers = [
    "live: requires daemon at :8765, CUDA GPU — hard-fails if daemon/GPU absent (never skipped)",
    "slow: LLM-heavy tests (>30s each) — skip for fast smoke checks with -m 'live and not slow'",
]
